--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
-    <!-- Firebase 8 SDK -->
+    <!-- Firebase 8 SDK (Compat) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
@@ -43,7 +43,7 @@
 </head>
 <body class="bg-gray-50 dark:bg-gray-950 text-gray-900 dark:text-gray-100 transition-colors duration-300">
     
-    <!-- Container Principal onde o JS injetará o HTML -->
+    <!-- Container Principal -->
     <div id="root">
         <!-- Loader Inicial -->
         <div class="min-h-screen flex items-center justify-center">
@@ -54,6 +54,7 @@
         </div>
     </div>
 
+    <!-- Scripts do App -->
     <script src="script.js"></script>
 </body>
 </html>
