--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-PT">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -13,64 +13,74 @@
 <body>
 <div id="app" v-cloak>
     
-    <div v-if="!sessaoAtiva" class="auth-wrapper">
-        <div class="auth-box">
-            <i class="fas fa-pizza-slice fa-3x" style="color: var(--ios-red);"></i>
-            <h1 style="margin: 10px 0;">Artigiano</h1>
-            <p style="color: var(--ios-gray); margin-bottom: 30px;">Gestão de Stock V60.6</p>
-            <input v-model="loginUser" class="input-ios" placeholder="Utilizador">
-            <input v-model="loginPass" type="password" class="input-ios" placeholder="Palavra-passe">
-            <button @click="fazerLogin" class="btn-primary">ENTRAR</button>
-        </div>
+    <div v-if="!sessaoAtiva" class="login-screen">
+        <i class="fas fa-pizza-slice login-logo"></i>
+        <h1 style="font-weight: 800; margin-bottom: 5px;">Artigiano</h1>
+        <p style="color: var(--ios-gray); margin-bottom: 40px;">Gestão Profissional V60.6</p>
+        <input v-model="loginUser" class="login-input" placeholder="Utilizador">
+        <input v-model="loginPass" type="password" class="login-input" placeholder="Senha">
+        <button @click="fazerLogin" class="btn-action btn-vermelho">Aceder ao Sistema</button>
     </div>
 
     <div v-else class="app-layout">
         <header class="app-header">
-            <div class="brand-name">L'Artigiano<span>.</span></div>
-            <button @click="logout" style="background:none; border:none; color:var(--ios-red);"><i class="fas fa-power-off"></i></button>
+            <div class="header-title"><span>L'</span>Artigiano<i class="fas fa-circle-check"></i></div>
+            <button @click="logout" style="border:none; background:none; font-size: 18px; color: var(--ios-red);">Sair</button>
         </header>
 
         <main>
             <div v-if="!moduloAtivo" class="dashboard">
-                <div class="dash-card verde" @click="moduloAtivo = 'producao'">
-                    <i class="fas fa-weight-hanging"></i><span>Massas</span>
+                <div class="dash-card" @click="moduloAtivo = 'producao'">
+                    <span v-if="diaSemana === 1" class="badge-hoje">HOJE!</span>
+                    <i class="fas fa-calculator" style="color: var(--ios-green);"></i>
+                    <b>Massa</b>
                 </div>
-                <div class="dash-card vermelho" @click="moduloAtivo = 'hortifruti'">
-                    <i class="fas fa-leaf"></i><span>Horti</span>
+                <div class="dash-card" @click="moduloAtivo = 'hortifruti'">
+                    <span class="badge-hoje">DIÁRIO</span>
+                    <i class="fas fa-leaf" style="color: var(--ios-red);"></i>
+                    <b>Hortifruti</b>
                 </div>
-                <div class="dash-card verde" @click="moduloAtivo = 'geral'">
-                    <i class="fas fa-boxes-stacked"></i><span>Geral</span>
+                <div class="dash-card" @click="moduloAtivo = 'geral'">
+                    <span v-if="diaSemana === 1" class="badge-hoje">SEGUNDA</span>
+                    <i class="fas fa-box-open" style="color: var(--ios-green);"></i>
+                    <b>Estoque</b>
                 </div>
-                <div class="dash-card vermelho" @click="moduloAtivo = 'bebidas'">
-                    <i class="fas fa-wine-glass"></i><span>Bebidas</span>
+                <div class="dash-card" @click="moduloAtivo = 'bebidas'">
+                    <i class="fas fa-glass-water" style="color: var(--ios-red);"></i>
+                    <b>Bebidas</b>
                 </div>
             </div>
 
-            <div v-else class="inventory-list">
-                <button @click="moduloAtivo = null" style="background:none; border:none; color:var(--ios-gray); padding: 10px 0;">
-                    <i class="fas fa-chevron-left"></i> Voltar ao Menu
-                </button>
-                
-                <h2 style="margin: 10px 0 20px;">Stock de {{ moduloAtivo }}</h2>
+            <div v-else class="inventory-view">
+                <div style="padding: 20px;">
+                    <button @click="moduloAtivo = null" style="background:none; border:none; color: var(--ios-blue); font-size: 17px;">
+                        <i class="fas fa-chevron-left"></i> Categorias
+                    </button>
+                    <h2 style="font-size: 28px; font-weight: 700; margin: 15px 0;">{{ moduloAtivo.toUpperCase() }}</h2>
+                </div>
 
-                <div v-for="item in itensFiltrados" :key="item.id" class="item-card">
-                    <div class="item-head">
-                        <strong>{{ item.nome }}</strong>
-                        <span style="font-size: 12px; color: var(--ios-gray);">Meta: {{ item.meta }}</span>
-                    </div>
-                    <div class="locais-grid">
-                        <div v-for="local in config.rota" :key="local" class="local-input">
-                            <label>{{ local }}</label>
-                            <input type="number" 
-                                   :value="item.contagem ? item.contagem[local] : ''"
-                                   @input="salvarContagem(item.id, local, $event.target.value)">
+                <div class="inventory-container">
+                    <div v-for="item in itensFiltrados" :key="item.id" class="item-card">
+                        <div class="item-info">
+                            <span class="item-name">{{ item.nome }}</span>
+                            <span class="item-meta">Meta: {{ item.meta }} {{ item.unC }}</span>
+                        </div>
+                        <div class="locais-grid">
+                            <div v-for="local in config.rota" :key="local" class="input-group">
+                                <label>{{ local }}</label>
+                                <input type="number" 
+                                       :value="item.contagem ? item.contagem[local] : ''"
+                                       @input="salvarContagem(item.id, local, $event.target.value)">
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <button v-for="d in config.destinos" @click="enviarZap(d)" class="btn-zap">
-                    <i class="fab fa-whatsapp"></i> Pedir para {{ d.nome }}
-                </button>
+                <div class="footer-actions">
+                    <button v-for="d in config.destinos" @click="enviarZap(d)" class="btn-action btn-verde">
+                        <i class="fab fa-whatsapp"></i> Pedir para {{ d.nome }}
+                    </button>
+                </div>
             </div>
         </main>
     </div>
